new file:   api/v1/classesApi.php 	new file:   api/v1/facilityApi.php 	modified:   api/v1/notificationApi.php 	modified:   api/v1/router.php 	deleted:    booking/courts.html 	new file:   booking/facilities.html 	modified:   index.html 	new file:   js/facilities.js

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="register.html" id="registerLink">Register</a>
                     </li>
                     <li class="nav-item" id="logoutLink" style="display: none;">
-                        <a class="nav-link" href="logout.php">Logout</a>
+                        <a class="nav-link" href="http://localhost/craydee-booking/api/router.php/logout">Logout</a>
                     </li>
                 </ul>
             </nav>
@@ -74,7 +74,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Available Courts</h5>
                         <p class="card-text">Check out the available sports courts you can book.</p>
-                        <a href="courts.html" class="btn btn-primary">View Courts</a>
+                        <a href="booking/facilities.html" class="btn btn-primary">View Courts</a>
                     </div>
                 </div>
             </div>
