--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="register.html" id="registerLink">Register</a>
                     </li>
                     <li class="nav-item" id="logoutLink" style="display: none;">
-                        <a class="nav-link" href="http://localhost/craydee-booking/api/router.php/logout">Logout</a>
+                        <button id="logoutBtn" class="btn btn-primary">Logout</button>
                     </li>
                 </ul>
             </nav>
@@ -93,5 +93,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-1d8E5dbK6b77HtFC0vXe5F2hPBzlhpN5aAoI4S7Eou6tEr+K8S5l6Bdd7/zBRP83" crossorigin="anonymous"></script>
     <script src="js/auth.js?v=1"></script>
+    <script src="js/logout.js?v=2"></script>
 </body>
 </html>
