--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Join a Class</h5>
                         <p class="card-text">Find and book classes such as yoga, zumba, and more.</p>
-                        <a href="classes.html" class="btn btn-primary">View Classes</a>
+                        <a href="booking/classes.html" class="btn btn-primary">View Classes</a>
                     </div>
                 </div>
             </div>
